Got CSS all working

--- a/demos/index.html
+++ b/demos/index.html
@@ -13,14 +13,17 @@
       box-sizing: border-box;
       margin: 0;
       padding: 0;
+      height: 100vh;
     }
     .frame {
+      padding: 20px;
+      width: calc(100% - 40px);
+      height: calc(100% - 40px);
     }
     #my_grid {
-      width: 100%;
-      padding: 20px;
+      height: 100%;
     }
-    #my_grid table {
+    #my_grid .playgrid_canvas {
       background-color: black;
     }
     .green {
