Now has a working centerImage() for centering images in grid pixels

--- a/demos/staticgrid_demo.html
+++ b/demos/staticgrid_demo.html
@@ -44,9 +44,8 @@
 
     function board() {
       var grid = new Grid("my_grid", { width: 8, height: 8 });
-      grid.plot(1, 1, "red");
       grid.plot(2, 2, "blue");
-      grid.image(5, 5, 100, "./images/animals/shark.png");
+      grid.centerImage(1, 1, 200, "./images/animals/shark.png");
     }
   </script>
 </head>
